--- a/index.html
+++ b/index.html
@@ -236,9 +236,9 @@
 			<div class="gallery-list row">
 				<div class="col-md-3 col-sm-6 gallery-grid gal_a gal_b">
 					<div class="gallery-single fix">
-						<img src="arun-master/images/Screenshot from 2021-04-23 10-30-48.png" class="img-fluid" alt="Image">
+						<img src="images/Screenshot from 2021-04-23 10-30-48.png" class="img-fluid" alt="Image">
 						<div class="img-overlay">
-							<a href="arun-master/images/Screenshot from 2021-04-23 10-30-48.png" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
+							<a href="images/Screenshot from 2021-04-23 10-30-48.png" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
 						</div>
 					</div>
 				</div>
@@ -283,9 +283,9 @@
                 
                 <div class="col-md-6 col-sm-6 gallery-grid gal_a gal_c">
 					<div class="gallery-single fix">
-						<img src="arun-master/images/Coding2.jpg" class="img-fluid" alt="Image">
+						<img src="images/Coding2.jpg" class="img-fluid" alt="Image">
 						<div class="img-overlay">
-							<a href="arun-master/images/Coding2.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
+							<a href="images/Coding2.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
 						</div>
 					</div>
 				</div>
