--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@
 								<div class="col-md-6">
 									<div class="form-group">
 										<textarea class="form-control" id="message" name="message" placeholder="Your Message" required="required"></textarea>
+                                        <label id="error5" style="color: red; display: none;">*Please enter your message</label>
 										
 									</div>
 								</div>
